--- a/src/layouts/dashboard/ui/MyInfo.module.scss
+++ b/src/layouts/dashboard/ui/MyInfo.module.scss
@@ -8,6 +8,7 @@
   border-radius: 5px;
   background-color: #f9f9f9;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
 }
 .myInfo:hover {
   cursor: pointer;
