--- a/src/layouts/dashboard/ui/ReviewHistory.module.scss
+++ b/src/layouts/dashboard/ui/ReviewHistory.module.scss
@@ -8,9 +8,5 @@
   border-radius: 5px;
   background-color: #f9f9f9;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease;
-}
-.reviewHistory:hover {
-  cursor: pointer;
-  transform: scale(1.05);
+  height: calc(100vh - 180px);
 }
