feat: 내 정보 레이아웃에 MyInfoTitle, Name, CoverLetter 컴포넌트 추가 및 스타일 적용

--- a/src/layouts/dashboard/ui/MyInfo.module.scss
+++ b/src/layouts/dashboard/ui/MyInfo.module.scss
@@ -1,7 +1,5 @@
 .myInfo {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
   padding: 1.25rem;
   border: 1px solid #e0e0e0;
@@ -9,4 +7,18 @@
   background-color: #f9f9f9;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   height: calc(100vh - 180px);
+}
+
+.myInfoInner {
+  width: 100%;
+  max-width: 60rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 0.625rem;
 }
