feat: 대시보드에서 확장된 상태의 커서 스타일 및 호버 효과 수정

--- a/src/pages/dashboard/ui/Dashboard.module.scss
+++ b/src/pages/dashboard/ui/Dashboard.module.scss
@@ -28,9 +28,11 @@
   }
 }
 
-.myInfoExpanded,
-.reviewHistoryExpanded {
-  pointer-events: none;
+.expanded {
+  cursor: default;
+  &:hover {
+    transform: none;
+  }
 }
 
 .myInfoExpanded .dashboardItem:nth-child(2),
