--- a/src/layouts/dashboard/ui/ReviewHistory.module.scss
+++ b/src/layouts/dashboard/ui/ReviewHistory.module.scss
@@ -1,7 +1,5 @@
 .reviewHistory {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
   padding: 1.25rem;
   border: 1px solid #e0e0e0;
@@ -9,4 +7,19 @@
   background-color: #f9f9f9;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   height: calc(100vh - 180px);
+  overflow-y: auto;
+}
+
+.reviewHistoryInner {
+  max-width: 60rem;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
 }
