--- a/src/shared/header/ui/Header.module.scss
+++ b/src/shared/header/ui/Header.module.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   padding: 0 1.25rem;
-  background-color: #f5f5f5;
+  background-color: #0e3270;
 }
 
 .inner {
@@ -12,4 +12,24 @@
   align-items: center;
   max-width: 70rem;
   width: 100%;
+}
+
+.loginButton {
+  background-color: #007bff; /* 파란색 배경 */
+  color: white; /* 글자색 */
+  font-size: 1rem;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+
+  &:hover {
+    background-color: #0056b3; /* 더 진한 파란색 */
+    transform: scale(1.05); /* 살짝 확대 */
+  }
+
+  &:active {
+    transform: scale(0.95); /* 클릭 시 살짝 축소 */
+  }
 }
