--- a/src/layouts/dashboard/ui/ReviewHistory.module.scss
+++ b/src/layouts/dashboard/ui/ReviewHistory.module.scss
@@ -19,7 +19,7 @@
 }
 
 .content {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
   gap: 1.25rem;
 }
