--- a/src/pages/profile/ui/Profile.module.scss
+++ b/src/pages/profile/ui/Profile.module.scss
@@ -57,7 +57,7 @@
   transition: background-color 0.2s ease-in-out;
 
   &:hover {
-    background-color: #f0f0f0;
+    //background-color: #f0f0f0;
   }
 }
 
@@ -80,13 +80,50 @@
   max-width: 200px;
 }
 
+.resumeTable th:nth-child(1),
+.resumeTable td:nth-child(1) {
+  width: 8%; // 번호
+}
+
+.resumeTable th:nth-child(2),
+.resumeTable td:nth-child(2) {
+  width: 32%; // 제목
+}
+
+.resumeTable th:nth-child(3),
+.resumeTable td:nth-child(3) {
+  width: 36%; // 설명
+}
+
+.resumeTable th:nth-child(4),
+.resumeTable td:nth-child(4) {
+  width: 16%; // 최근 수정 일자
+}
+
+.resumeTable th:nth-child(5),
+.resumeTable td:nth-child(5) {
+  width: 8%; // 삭제 버튼
+  text-align: center;
+}
+
+.delete {
+  background-color: #f0f0f0;
+  box-sizing: border-box;
+  padding: 4px 0px;
+  border-radius: 4px;
+  width: 64px;
+
+  &:hover {
+    background-color: #e0e0e0;
+  }
+}
+
 .buttonGroup {
   display: flex;
   gap: 1rem;
   justify-content: end;
   margin-top: 16px;
 
-  .delete,
   .create {
     background-color: #0e3270;
     color: white;
