feat: 자기소개서 삭제 모달 및 완료 모달 컴포넌트 추가

--- a/src/pages/profile/ui/Profile.module.scss
+++ b/src/pages/profile/ui/Profile.module.scss
@@ -47,6 +47,11 @@
   margin-bottom: 0.5rem;
 }
 
+.tableContainer {
+  width: 100%;
+  overflow-x: auto;
+}
+
 .resumeTable {
   width: 100%;
   border-collapse: collapse;
@@ -55,10 +60,6 @@
 .clickableRow {
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
-
-  &:hover {
-    //background-color: #f0f0f0;
-  }
 }
 
 .resumeTable th {
