--- a/src/shared/header/ui/Header.module.scss
+++ b/src/shared/header/ui/Header.module.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 6.25rem;
-  background-color: #0e3270;
+  background-color: rgb(37, 58, 115);
 }
 
 .container {
