--- a/src/shared/header/ui/Header.module.scss
+++ b/src/shared/header/ui/Header.module.scss
@@ -3,7 +3,8 @@
   justify-content: center;
   align-items: center;
   height: 6.25rem;
-  background-color: rgb(37, 58, 115);
+  background-color: #253a73;
+  padding: 0 1rem;
 }
 
 .container {
@@ -12,6 +13,18 @@
   justify-content: space-between;
   align-items: center;
   max-width: 80rem;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.menuIcon {
+  display: none;
+  font-size: 2rem;
+  color: white;
+  cursor: pointer;
 }
 
 .menuSection {
@@ -42,4 +55,50 @@
   font-size: 1rem;
   text-decoration: none;
   cursor: pointer;
+}
+
+@media screen and (max-width: 1024px) {
+  .container {
+    position: relative;
+    justify-content: center;
+  }
+
+  .logo {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    transition: transform 0.5s ease-out;
+  }
+
+  .menuIcon {
+    display: block;
+    position: absolute;
+    right: 1rem;
+  }
+
+  .menuSection {
+    display: none;
+    flex-direction: column;
+    width: 100vw;
+    background-color: white;
+    position: absolute;
+    top: 50px;
+    text-align: center;
+    gap: 0px;
+  }
+
+  .menuSection.active {
+    display: flex;
+  }
+
+  .menu,
+  .login {
+    color: black;
+    padding: 24px;
+    width: 100%;
+
+    &:hover {
+      background-color: #f3f4f5;
+    }
+  }
 }
