--- a/src/components/shared/ui/MyInfo.module.scss
+++ b/src/components/shared/ui/MyInfo.module.scss
@@ -5,4 +5,51 @@
   padding: 1.5rem;
   box-sizing: border-box;
   gap: 24px;
+  font-size: 1rem;
+  text-align: center;
+
+  @media (max-width: 1024px) {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 16px 0px;
+    gap: 32px;
+  }
+}
+
+.row {
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+
+  @media (min-width: 1025px) {
+    &:not(:last-child)::after {
+      content: "|";
+      position: absolute;
+      right: -12px;
+      color: #aaa;
+    }
+  }
+
+  @media (max-width: 1024px) {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+
+    &:not(:last-child)::after {
+      content: "";
+      position: absolute;
+      bottom: -16px;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: #ddd;
+    }
+  }
+}
+
+.label {
+  font-weight: bold;
+  margin: 8px;
 }
