feat: 분석 보고서 테이블에 스크롤 가능 컨테이너 추가

--- a/src/pages/analysis/ui/Analysis.module.scss
+++ b/src/pages/analysis/ui/Analysis.module.scss
@@ -37,6 +37,10 @@
   margin-bottom: 0.5rem;
 }
 
+.tableContainer {
+  overflow-x: auto;
+}
+
 .analysisTable {
   width: 100%;
   border-collapse: collapse;
