--- a/src/shared/resumeModal/ui/ResumeModal.module.scss
+++ b/src/shared/resumeModal/ui/ResumeModal.module.scss
@@ -45,9 +45,23 @@
   height: 30px;
 }
 
-.titleValidation {
-  color: red;
-  font-size: 12px;
+.inputError {
+  border: 2px solid red;
+  outline: none;
+}
+
+.titleBottom {
+  display: flex;
+  justify-content: space-between;
+  width: 50%;
+}
+
+.titleBottom.withError {
+  justify-content: space-between;
+}
+
+.titleBottom.noError {
+  justify-content: flex-end;
 }
 
 .descriptionInput {
@@ -56,8 +70,19 @@
   height: 30px;
 }
 
-.detail {
+.detailArea {
+  width: 100%;
   height: 100%;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+}
+
+.detail {
+  width: 100%;
+  height: 100%;
+  resize: none;
+  box-sizing: border-box;
 }
 
 .buttonGroup {
@@ -71,5 +96,43 @@
     color: white;
     padding: 0.5rem 1rem;
     cursor: pointer;
+  }
+}
+
+.charCount {
+  font-size: 12px;
+  color: gray;
+  text-align: right;
+  margin-top: 4px;
+
+  &.error {
+    color: red;
+  }
+}
+.validationError {
+  color: red;
+  font-size: 12px;
+  margin-top: 4px;
+}
+
+.validationError {
+  animation: shake 0.3s;
+}
+
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-4px);
+  }
+  50% {
+    transform: translateX(4px);
+  }
+  75% {
+    transform: translateX(-4px);
+  }
+  100% {
+    transform: translateX(0);
   }
 }
