feat: 헤더에 이력서 링크 추가 및 스타일 수정

--- a/src/shared/header/ui/Header.module.scss
+++ b/src/shared/header/ui/Header.module.scss
@@ -37,6 +37,17 @@
     justify-content: end;
     gap: 20px;
     color: white;
+
+    .mySection {
+      display: flex;
+      gap: 10px;
+
+      .report,
+      .resume {
+        text-decoration: none;
+        color: white;
+      }
+    }
   }
 
   .authSection {
