--- a/src/shared/aboutLayout/ui/AboutLayout.module.scss
+++ b/src/shared/aboutLayout/ui/AboutLayout.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #e0e6ed;
+  background-color: #eff2f6;
 }
 
 .wrapper {
