--- a/src/pages/analysis/ui/Analysis.module.scss
+++ b/src/pages/analysis/ui/Analysis.module.scss
@@ -1,52 +1,26 @@
 .analysis {
   display: flex;
-  justify-content: center;
 }
 
-.container {
-  width: 100%;
-  max-width: 80rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1.5rem;
-  padding-bottom: 56px;
+.sidebar {
+  width: 350px;
+  height: calc(100vh - 100px);
+  background-color: #eff2f6;
+  transition: width 0.3s ease;
 }
 
-.title {
-  text-align: center;
-  font-weight: 400;
-  font-size: 26px;
-  padding-top: 52px;
+.collapsed {
+  width: 72px;
 }
 
-.horizontalLine {
-  width: 100%;
-  height: 1px;
-  background-color: black;
+.iconSection {
+  padding: 20px 16px;
+  box-sizing: border-box;
+  height: 80px;
 }
 
-.analysisSection {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.subtitle {
-  font-size: 1.2rem;
-  margin-bottom: 0.5rem;
-}
-
-.buttonGroup {
-  display: flex;
-  gap: 1rem;
-  justify-content: end;
-  margin-top: 16px;
-
-  .create {
-    background-color: #0e3270;
-    color: white;
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-  }
+.sidebarIcon {
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
 }
