chore: 분석 레포트 페이지에 자소서 원본 보기 추가 및 스타일 수정

--- a/src/pages/resume/ui/Resume.module.scss
+++ b/src/pages/resume/ui/Resume.module.scss
@@ -8,6 +8,7 @@
 .wrapper {
   background-color: white;
   width: 863px;
+  border: 1px solid #e0e6ed;
   border-radius: 8px;
   padding: 40px;
   box-sizing: border-box;
