--- a/src/shared/header/ui/Header.module.scss
+++ b/src/shared/header/ui/Header.module.scss
@@ -93,6 +93,7 @@
       background-color: white;
       padding: 4px 20px;
       border-radius: 8px;
+      cursor: pointer;
     }
 
     .analysisText {
