--- a/src/pages/analysis/ui/Analysis.module.scss
+++ b/src/pages/analysis/ui/Analysis.module.scss
@@ -69,6 +69,15 @@
   display: flex;
   flex-direction: column;
   gap: 40px;
+  height: calc(100vh - 100px);
+  box-sizing: border-box;
+  width: 100%;
+
+  overflow-y: auto;
+  word-wrap: break-word;
+  word-break: break-word;
+  white-space: normal;
+  overflow-wrap: break-word;
 
   .title {
     font-size: 20px;
@@ -80,6 +89,8 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    height: 100%;
+    box-sizing: border-box;
   }
 
   .originalResumeButton {
@@ -107,5 +118,10 @@
     height: 500px;
     max-height: 500px;
     transition: max-height 0.3s ease-in;
+  }
+
+  .streaming,
+  .body {
+    width: 100%;
   }
 }
