--- a/src/pages/notice/ui/Notice.module.scss
+++ b/src/pages/notice/ui/Notice.module.scss
@@ -1,9 +1,10 @@
 .notice {
   width: 100%;
-  height: calc(100vh - 100px);
   background-color: #eff2f6;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 60px;
   padding: 40px;
   box-sizing: border-box;
 }
@@ -47,6 +48,7 @@
     justify-content: space-between;
     border-bottom: 1px solid #eff2f6;
     height: 60px;
+    box-sizing: border-box;
   }
 
   .modifiedAt {
@@ -64,7 +66,6 @@
 }
 
 .analysisTable td {
-  padding: 0.75rem;
   text-align: center;
   white-space: nowrap;
   overflow: hidden;
