--- a/src/pages/analysis/ui/Analysis.module.scss
+++ b/src/pages/analysis/ui/Analysis.module.scss
@@ -3,12 +3,13 @@
 }
 
 .sidebar {
-  width: 350px;
+  width: 280px;
   height: calc(100vh - 100px);
   background-color: #eff2f6;
   transition: width 0.3s ease;
-  overflow: hidden;
+  overflow-y: hidden;
   box-sizing: border-box;
+  flex-shrink: 0;
 }
 
 .collapsed {
@@ -63,10 +64,11 @@
 .rightSection {
   display: flex;
   justify-content: center;
+  width: 100%;
+  overflow-y: auto;
 }
 
 .rightWraaper {
-  flex: 1;
   padding: 40px;
   display: flex;
   flex-direction: column;
@@ -74,9 +76,8 @@
   height: calc(100vh - 100px);
   box-sizing: border-box;
   width: 100%;
-  max-width: 650px;
+  max-width: 800px;
 
-  overflow-y: auto;
   word-break: break-word;
   white-space: normal;
   overflow-wrap: break-word;
@@ -107,19 +108,63 @@
 
   /* 원본 내용 */
   .originalResume {
-    border: 1px solid transparent;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
     height: 0;
-    max-height: 0;
+    min-height: 0;
     overflow: hidden;
-    transition: max-height 0.3s ease-out, height 0s 0.3s, border 0.5s ease;
+
+    transition: min-height 0.3s ease-out, height 0s 0.3s;
   }
 
   /* 열릴 때의 상태 */
   .originalResume.open {
-    border: 1px solid #969696;
-    height: 500px;
-    max-height: 500px;
-    transition: max-height 0.3s ease-in;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+    height: auto;
+    min-height: 508px;
+    box-sizing: border-box;
+
+    transition: min-height 0.3s ease-in;
+  }
+
+  .resumeTitle {
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  .input {
+    width: 100%;
+    height: 294px;
+    overflow-y: auto;
+    background-color: #eff2f6;
+    border-radius: 8px;
+    padding: 12px;
+    box-sizing: border-box;
+  }
+
+  .companyAndPosition {
+    display: flex;
+    gap: 20px;
+    width: 100%;
+
+    .companyWrapper,
+    .positionWrapper {
+      width: 100%;
+    }
+
+    .subTitle {
+      font-size: 20px;
+    }
+    .input {
+      height: 56px;
+      box-sizing: border-box;
+      align-content: center;
+    }
   }
 
   .streaming,
