--- a/src/pages/notice/ui/Notice.module.scss
+++ b/src/pages/notice/ui/Notice.module.scss
@@ -20,10 +20,29 @@
   height: fit-content;
 }
 
-.title {
-  font-size: 24px;
-  font-weight: bold;
-  color: #0e3270;
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .title {
+    font-size: 24px;
+    font-weight: bold;
+    color: #0e3270;
+  }
+
+  .writeButton {
+    display: flex;
+    justify-content: center;
+    width: 232px;
+    height: 40px;
+    background-color: #0e3270;
+    align-items: center;
+    border-radius: 8px;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+  }
 }
 
 .tableContainer {
@@ -33,10 +52,6 @@
   justify-content: space-between;
   height: 100%;
   box-sizing: border-box;
-}
-
-.table {
-  overflow-x: auto;
 }
 
 .analysisTable {
@@ -68,10 +83,54 @@
 .analysisTable td {
   text-align: center;
   white-space: nowrap;
-  overflow: hidden;
   text-overflow: ellipsis;
   max-width: 200px;
   align-content: center;
+
+  .menuContainer {
+    position: relative;
+  }
+
+  .menuButton {
+    background: none;
+    cursor: pointer;
+    font-size: 24px;
+    width: 24px;
+    height: 30px;
+  }
+
+  .menuDropdown {
+    position: absolute;
+    left: 0;
+    width: 160px;
+    background: white;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    padding: 10px;
+    z-index: 100;
+    box-sizing: border-box;
+
+    div {
+      width: 100%;
+      height: 40px;
+      align-content: center;
+      display: flex;
+      justify-content: start;
+      padding: 10px;
+      box-sizing: border-box;
+      border-radius: 4px;
+    }
+    :hover {
+      background-color: #eff2f6;
+    }
+
+    .delete {
+      color: red;
+    }
+  }
 }
 
 .pagination {
