feat: 공지사항 CRUD 기능 추가 및 UI 개선

--- a/src/pages/notice/ui/Notice.module.scss
+++ b/src/pages/notice/ui/Notice.module.scss
@@ -11,13 +11,13 @@
 
 .wrapper {
   width: 862px;
+  height: 704px;
   padding: 40px;
   background-color: white;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   gap: 20px;
-  height: fit-content;
 }
 
 .header {
