feat: 공지사항 목록에 공지사항이 없을 때 메시지 표시 기능 추가 및 스타일 개선

--- a/src/pages/notice/ui/Notice.module.scss
+++ b/src/pages/notice/ui/Notice.module.scss
@@ -48,10 +48,22 @@
 .tableContainer {
   display: flex;
   flex-direction: column;
-  gap: 60px;
   justify-content: space-between;
   height: 100%;
   box-sizing: border-box;
+}
+
+.table {
+  height: 100%;
+}
+
+.noNotices {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  color: #969696;
 }
 
 .analysisTable {
@@ -136,7 +148,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 20px;
   gap: 40px;
 
   .prevButton,
