--- a/src/pages/noticeDetail/ui/NoticeDetail.module.scss
+++ b/src/pages/noticeDetail/ui/NoticeDetail.module.scss
@@ -42,9 +42,62 @@
         font-weight: bold;
       }
 
-      .date {
-        font-size: 16px;
-        color: #969696;
+      .dateAndMenu {
+        display: flex;
+        gap: 12px;
+        align-items: center;
+
+        .date {
+          font-size: 16px;
+          color: #969696;
+        }
+
+        .menuContainer {
+          position: relative;
+
+          .menuButton {
+            background: none;
+            cursor: pointer;
+            font-size: 24px;
+            width: 24px;
+            height: 30px;
+            color: #969696;
+          }
+
+          .menuDropdown {
+            position: absolute;
+            left: 0;
+            width: 160px;
+            background: white;
+            box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+            border-radius: 8px;
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+            padding: 10px;
+            z-index: 100;
+            box-sizing: border-box;
+
+            div {
+              width: 100%;
+              height: 40px;
+              align-content: center;
+              display: flex;
+              justify-content: start;
+              padding: 10px;
+              box-sizing: border-box;
+              border-radius: 4px;
+              cursor: pointer;
+            }
+            :hover {
+              background-color: #eff2f6;
+            }
+
+            .delete {
+              color: red;
+            }
+          }
+        }
       }
     }
 
