--- a/src/shared/header/ui/Header.module.scss
+++ b/src/shared/header/ui/Header.module.scss
@@ -146,6 +146,10 @@
   text-decoration: none;
   transition: background 0.3s;
   border-radius: 8px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .dropdown span:hover {
