--- a/src/pages/Error/login/ui/LoginError.module.scss
+++ b/src/pages/Error/login/ui/LoginError.module.scss
@@ -1,25 +1,42 @@
 .loginError {
   display: flex;
+  flex-direction: column;
+  gap: 60px;
+  align-items: center;
+  justify-content: center;
+  height: calc(100vh - 6.25rem);
+  background-color: #eae8e2;
+}
+
+.textArea {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  align-items: center;
+  text-align: center;
+
+  .title {
+    color: #990e17;
+    font-size: 24px;
+    font-weight: bold;
+  }
+
+  .info {
+    color: #969696;
+    font-size: 16px;
+  }
+}
+
+.loginButton {
+  width: 600px;
+  height: 60px;
+  display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(100vh - 6.25rem);
-  font-family: Arial, sans-serif;
-}
-
-.container {
-  text-align: center;
-  padding: 20px;
+  background-color: #990e17;
   border-radius: 8px;
-}
-
-.container span {
-  display: block;
-  font-size: 1.5rem;
-  margin-bottom: 10px;
-}
-
-.container span:first-child {
+  cursor: pointer;
+  color: white;
+  font-size: 20px;
   font-weight: bold;
-  font-size: 1.8rem;
-  margin-bottom: 15px;
 }
