--- a/src/pages/resume/ui/Resume.module.scss
+++ b/src/pages/resume/ui/Resume.module.scss
@@ -1,49 +1,76 @@
 .resume {
-  background-color: #eff2f6;
+  background-color: #f6f5ef;
   display: flex;
   justify-content: center;
-  padding: 40px;
+  padding: 5rem 0rem;
 }
 
 .wrapper {
   background-color: white;
-  width: 863px;
-  border: 1px solid #e0e6ed;
-  border-radius: 8px;
-  padding: 40px;
+  width: 53.9375rem;
+  border: 1px solid #eae8e2;
+  border-radius: 0.5rem;
+  padding: 2.5rem;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  gap: 60px;
+  gap: 3.75rem;
 }
 
 .myResume {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-}
+  gap: 1.25rem;
 
-.notice {
-  background-color: #fff8f3;
-  display: flex;
-  gap: 20px;
-  padding: 20px;
+  .title {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #990e17;
+  }
 
-  .infoImage {
-    width: 40px;
-    height: 40px;
+  .info {
+    background-color: #fff8f3;
+    display: flex;
+    gap: 1.25rem;
+    padding: 1.25rem;
+
+    .infoImage {
+      width: 2.5rem;
+      height: 2.5rem;
+    }
+    .infoText {
+      font-size: 0.875rem;
+
+      span {
+        color: #969696;
+      }
+
+      ul {
+        margin: 0;
+        padding-inline-start: 1.375rem;
+      }
+
+      li::marker {
+        font-size: 8px;
+      }
+
+      .noDot {
+        list-style: none;
+        color: #969696;
+      }
+    }
   }
 }
 
 .form {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 1.25rem;
   align-items: center;
 
   .school {
     display: flex;
-    gap: 12px;
+    gap: 0.75rem;
     width: 100%;
   }
 
@@ -51,35 +78,111 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: 0.75rem;
+  }
+
+  .inputLabel {
+    font-size: 1rem;
+  }
+
+  .hint {
+    color: #969696;
   }
 
   input {
     width: 100%;
     box-sizing: border-box;
-    height: 56px;
-    font-size: 20px;
-    background-color: #eff2f6;
-    border-radius: 8px;
+    height: 3.5rem;
+    font-size: 1rem;
+    background-color: #f6f5ef;
+    border-radius: 0.5rem;
     border: none;
+    padding: 0rem 0.75rem;
+
+    &:focus {
+      outline: 1px solid #4d4d4d;
+    }
+  }
+
+  .inactiveInput {
+    color: #4d4d4d;
+  }
+
+  .activeInput {
+    color: #969696;
+    background-color: white;
+    border: 1px solid #eae8e2;
+
+    &:focus {
+      color: black;
+    }
+  }
+
+  .errorText {
+    color: #e75959;
+    font-size: 14px;
+    display: block;
+    animation: invalid-feedback-shake 0.35s linear;
+    margin-top: 0.25rem;
+  }
+
+  .errorInput {
+    outline: 1px solid #e75959 !important;
   }
 
   .save {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 1.25rem;
     align-items: center;
-    width: 600px;
-    margin-top: 40px;
+    width: 37.5rem;
+    margin-top: 2.5rem;
+
+    .description {
+      color: #4d4d4d;
+    }
+    .noDescription {
+      display: none;
+    }
 
     .saveButton {
       width: 100%;
-      height: 56px;
-      background-color: #0e3270;
+      height: 3.5rem;
+      background-color: #990e17;
       color: white;
-      border-radius: 8px;
+      border-radius: 0.5rem;
       border: none;
-      font-size: 20px;
+      font-size: 1.25rem;
+      font-weight: bold;
+      cursor: pointer;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
+  }
+}
+
+@keyframes invalid-feedback-shake {
+  0%,
+  100% {
+    transform: translateX(0);
+  }
+
+  8%,
+  41% {
+    transform: translateX(-0.625rem);
+  }
+
+  25%,
+  58% {
+    transform: translateX(0.625rem);
+  }
+
+  75% {
+    transform: translateX(-0.3125rem);
+  }
+
+  92% {
+    transform: translateX(0.3125rem);
   }
 }
