style: 색상 및 배경색 변경으로 분석 컴포넌트 스타일 개선

--- a/src/layouts/analysis/ui/AnalysisDetail.module.scss
+++ b/src/layouts/analysis/ui/AnalysisDetail.module.scss
@@ -24,7 +24,7 @@
 
   .title {
     font-size: 20px;
-    color: #0e3270;
+    color: #990e17;
     font-weight: bold;
   }
 
@@ -81,7 +81,7 @@
     width: 100%;
     height: 294px;
     overflow-y: auto;
-    background-color: #eff2f6;
+    background-color: #f4f2ed;
     border-radius: 8px;
     padding: 12px;
     box-sizing: border-box;
