--- a/src/layouts/analysis/ui/AnalysisSidebar.module.scss
+++ b/src/layouts/analysis/ui/AnalysisSidebar.module.scss
@@ -1,7 +1,7 @@
 .analysisSidebar {
   width: 280px;
   height: calc(100vh - 100px);
-  background-color: #eff2f6;
+  background-color: #f4f2ed;
   transition: width 0.3s ease;
   overflow-y: hidden;
   box-sizing: border-box;
