feat: 분석 사이드바에서 삭제 모달을 위한 상태 관리 개선 및 스타일 수정

--- a/src/layouts/analysis/ui/AnalysisSidebar.module.scss
+++ b/src/layouts/analysis/ui/AnalysisSidebar.module.scss
@@ -47,15 +47,25 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  color: #4d4d4d;
+  font-size: 16px;
 
   &:hover,
   &.selected {
-    background-color: #e0e6ed;
+    background-color: #eae8e2;
+
+    .deleteButton {
+      display: block;
+    }
+  }
+
+  &.selected {
+    color: #131313;
   }
 
   .deleteButton {
-    display: flex;
-    align-items: center;
+    display: none;
+    color: #969696;
   }
 }
 
