style: GoToMainButton 스타일 수정 - 배경색, 테두리 반경 및 글꼴 속성 변경

--- a/src/components/shared/goToMainButton/ui/GoToMainButton.module.scss
+++ b/src/components/shared/goToMainButton/ui/GoToMainButton.module.scss
@@ -2,10 +2,12 @@
   width: 600px;
   height: 60px;
   box-sizing: border-box;
-  background-color: #0e3270;
+  background-color: #990e17;
   color: white;
   text-align: center;
   align-content: center;
-  border-radius: 8px;
+  border-radius: 4px;
   cursor: pointer;
+  font-size: 20px;
+  font-weight: bold;
 }
