style: 공지사항 관련 UI 색상 및 스타일 수정 - 배경색, 테두리 반경 및 글꼴 속성 변경

--- a/src/layouts/notice-detail/ui/NoticeDetailSkeleton.module.scss
+++ b/src/layouts/notice-detail/ui/NoticeDetailSkeleton.module.scss
@@ -1,5 +1,5 @@
 .noticeDetail {
-  background-color: #eff2f6;
+  background-color: #f4f2ed;
   display: flex;
   flex-direction: column;
   gap: 60px;
@@ -55,8 +55,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 8px;
+  border-radius: 4px;
   color: white;
   background-color: #990e17;
   cursor: pointer;
+  font-size: 20px;
+  font-weight: bold;
 }
