--- a/src/layouts/notice/ui/NoticeSkeleton.module.scss
+++ b/src/layouts/notice/ui/NoticeSkeleton.module.scss
@@ -1,6 +1,6 @@
 .notice {
   width: 100%;
-  background-color: #f6f5ef;
+  background-color: #f4f2ed;
   display: flex;
   flex-direction: column;
   align-items: center;
