--- a/src/pages/notice-write/ui/WriteNotice.module.scss
+++ b/src/pages/notice-write/ui/WriteNotice.module.scss
@@ -1,5 +1,5 @@
 .writeNotice {
-  background-color: #eff2f6;
+  background-color: #f4f2ed;
   display: flex;
   justify-content: center;
   padding: 120px 0px;
@@ -24,7 +24,7 @@
   .title {
     font-size: 24px;
     font-weight: bold;
-    color: #0e3270;
+    color: #990e17;
   }
 
   .body {
@@ -43,11 +43,16 @@
     .titleInput {
       width: 100%;
       height: 56px;
-      background-color: #eff2f6;
+      background-color: #f4f2ed;
       border-radius: 8px;
       border: none;
       padding: 12px;
       box-sizing: border-box;
+
+      &:focus {
+        outline: none;
+        border: 0.0625rem solid #4d4d4d;
+      }
     }
   }
 
@@ -61,9 +66,15 @@
       height: 300px;
       border: none;
       border-radius: 8px;
-      background-color: #eff2f6;
+      background-color: #f4f2ed;
       padding: 12px;
       box-sizing: border-box;
+      resize: none;
+
+      &:focus {
+        outline: none;
+        border: 0.0625rem solid #4d4d4d;
+      }
     }
   }
 }
@@ -81,14 +92,14 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 8px;
+    border-radius: 4px;
     font-size: 20px;
     font-weight: bold;
     cursor: pointer;
   }
 
   .uploadButton {
-    background-color: #0e3270;
+    background-color: #990e17;
     color: white;
   }
 
