--- a/src/pages/analyze/ui/Analyze.module.scss
+++ b/src/pages/analyze/ui/Analyze.module.scss
@@ -9,6 +9,19 @@
   display: flex;
   flex-direction: column;
   gap: 2.5rem;
+
+  @media (max-width: 1024px) {
+    padding: 3rem 5rem;
+    max-width: 100%;
+  }
+
+  @media (max-width: 768px) {
+    padding: 2rem 2rem;
+  }
+
+  @media (max-width: 480px) {
+    padding: 2rem 1rem;
+  }
 }
 
 .info {
@@ -55,6 +68,11 @@
   .infoImage {
     width: 2.5rem;
     height: 2.5rem;
+
+    @media (max-width: 480px) {
+      width: 2rem;
+      height: 2rem;
+    }
   }
 
   span {
@@ -222,6 +240,14 @@
     align-items: center;
     width: 37.5rem;
     margin-top: 2.5rem;
+
+    @media (max-width: 768px) {
+      width: 25rem;
+    }
+
+    @media (max-width: 480px) {
+      width: 20rem;
+    }
 
     .text {
       color: #4d4d4d;
