--- a/src/pages/analyze/ui/Analyze.module.scss
+++ b/src/pages/analyze/ui/Analyze.module.scss
@@ -11,16 +11,16 @@
   gap: 2.5rem;
 
   @media (max-width: 1024px) {
-    padding: 3rem 5rem;
+    padding: 3rem 5rem 5rem 5rem;
     max-width: 100%;
   }
 
   @media (max-width: 768px) {
-    padding: 2rem 2rem;
+    padding: 2rem 2rem 5rem 2rem;
   }
 
   @media (max-width: 480px) {
-    padding: 2rem 1rem;
+    padding: 2rem 1rem 4rem 1rem;
   }
 }
 
