style: AnalysisSidebar 배경색을 변경하여 시각적 개선

--- a/src/layouts/analysis/ui/AnalysisSidebar.module.scss
+++ b/src/layouts/analysis/ui/AnalysisSidebar.module.scss
@@ -129,7 +129,7 @@
     width: 100%;
     height: 100%;
     z-index: 10;
-    background: rgba(0, 0, 0, 0.08);
+    background: #fafafa80;
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.3s ease-in-out;
