--- a/src/pages/notice-detail/ui/NoticeDetail.module.scss
+++ b/src/pages/notice-detail/ui/NoticeDetail.module.scss
@@ -4,11 +4,12 @@
   flex-direction: column;
   gap: 60px;
   align-items: center;
-  padding: 40px 0px 120px 0px;
+  padding: 40px 40px 120px 40px;
 }
 
 .wrapper {
-  width: 862px;
+  width: 100%;
+  max-width: 862px;
   padding: 40px;
   background-color: white;
   box-sizing: border-box;
@@ -120,4 +121,24 @@
   cursor: pointer;
   font-size: 20px;
   font-weight: bold;
+}
+
+@media (max-width: 768px) {
+  .noticeDetail {
+    padding: 40px 20px 120px 20px;
+  }
+
+  .listButton {
+    width: 440px;
+  }
+}
+
+@media (max-width: 480px) {
+  .noticeDetail {
+    padding: 40px 0px 100px 0px;
+  }
+
+  .listButton {
+    width: 320px;
+  }
 }
