--- a/src/pages/Error/login/ui/LoginError.module.scss
+++ b/src/pages/Error/login/ui/LoginError.module.scss
@@ -40,3 +40,15 @@
   font-size: 20px;
   font-weight: bold;
 }
+
+@media (max-width: 768px) {
+  .loginButton {
+    width: 440px;
+  }
+}
+
+@media (max-width: 480px) {
+  .loginButton {
+    width: 320px;
+  }
+}
