style: NotFound 페이지의 배경색 및 제목 색상 변경

--- a/src/pages/Error/notFound/ui/NotFound.module.scss
+++ b/src/pages/Error/notFound/ui/NotFound.module.scss
@@ -1,5 +1,5 @@
 .notFound {
-  background-color: #e0e6ed;
+  background-color: #eae8e2;
   height: calc(100vh - 100px);
   display: flex;
   justify-content: center;
@@ -23,7 +23,7 @@
 .title {
   font-size: 32px;
   font-weight: bold;
-  color: #0e3270;
+  color: #990e17;
 }
 
 .textArea {
