--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,13 @@
 
 @font-face {
   font-family: "Pretendard";
+  src: url("/public/font/Pretendard-Medium.woff2") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Pretendard";
   src: url("/public/font/Pretendard-Bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
