--- a/src/pages/privacy-policy/ui/PrivacyPolicy.module.scss
+++ b/src/pages/privacy-policy/ui/PrivacyPolicy.module.scss
@@ -1,14 +1,15 @@
 .privacyPolicy {
-  background-color: #eff2f6;
+  background-color: #f4f2ed;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 40px;
-  padding: 80px;
+  padding: 80px 16px 160px 16px;
 }
 
 .wrapper {
-  width: 686px;
+  max-width: 686px;
+  width: 100%;
   background-color: white;
   padding: 40px;
   display: flex;
@@ -20,7 +21,48 @@
 }
 
 .title {
-  color: #0e3270;
+  color: #990e17;
   font-size: 24px;
   font-weight: bold;
+}
+
+.content {
+  width: 100%;
+  color: #333;
+  font-size: 14px;
+  line-height: 1.8;
+  white-space: pre-line;
+
+  &::first-letter {
+    margin-left: 0;
+  }
+
+  // 항목 강조 스타일
+  strong {
+    font-weight: bold;
+    color: #222;
+  }
+
+  b {
+    font-weight: 600;
+    color: #444;
+  }
+
+  ul,
+  ol {
+    margin: 4px 0;
+  }
+
+  li {
+    margin-bottom: 6px;
+  }
+
+  p {
+    margin-top: 4px;
+    margin-bottom: 4px;
+  }
+
+  h2 {
+    margin-bottom: 4px;
+  }
 }
